# pmq

./: .gitignore  CMakeLists.txt  LabBook.html  LabBook.org  README.rst  ResearchNotes.org  TwitterVis_labBook.org  experiments.org  main.cpp  pprVLDB.org
WebContent/: dev.html  index.html
WebContent/css/: jquery-ui.css  jquery-ui.min.css  jquery-ui.structure.min.css  jquery-ui.theme.css  jquery-ui.theme.min.css  styles.css
WebContent/js/: array.equals.js  custom_layer.js  grid_layer.js  histogram.js  jquery-2.1.4.min.js  jquery.jqGrid.min.js  leaflet-hashedcubes.js  leaflet-heatmap.js  leaflet-src.js  leaflet.min.js  linechart.js  mercator.js  progressbar.js  scatterchart.js  sql.js  ui.js
angularjs/: .angular-cli.json  README.md  package-lock.json  package.json  tsconfig.json
angularjs/e2e/: app.e2e-spec.ts  app.po.ts
angularjs/src/: index.html  styles.css
angularjs/src/app/: app-routing.module.ts  app.component.html  app.module.ts  configuration.service.ts  data.service.ts  geocoding.service.spec.ts  geocoding.service.ts  map.service.ts  web-sockect.service.spec.ts  web-sockect.service.ts
angularjs/src/app/demo1/: demo1.component.html  demo1.component.ts
angularjs/src/app/demo2/: demo2.component.html  demo2.component.ts
angularjs/src/app/demo3/: demo3.component.css  demo3.component.html  demo3.component.ts
angularjs/src/app/demo4/: demo4.component.ts
angularjs/src/app/heatmap/: heatmap.component.css  heatmap.component.html  heatmap.component.ts  marker.ts  pin.ts
angularjs/src/app/heatmap/info/: info.component.css  info.component.html  info.component.ts
angularjs/src/app/heatmap/navigator/: navigator.component.css  navigator.component.html  navigator.component.ts
angularjs/src/app/js/: heatmap.js
angularjs/src/app/table/: table.component.html  table.component.ts
benchmarks/: CMakeLists.txt  bench_insert_and_scan.cpp  bench_insert_remove_count.cpp  bench_insert_remove_scan.cpp  bench_memory.cpp  bench_micro_pmq.cpp  bench_queries_pmq.cpp  bench_queries_region.cpp  bench_topk_search.cpp  benchmarkconfig.h.in  input_it.h  memory_util.h
data/: benchmark_debug.csv  debug.csv  queriesLHS.csv  queriesLHS.org  queriesLHS.rst  queriesLHS_30_50.csv  queriesTwitter.csv  template_exp.org
data/cicero/exp20170822165129/: exp.org  info.org  parse.sh  run_1503497835
data/cicero/exp20170825181747/: exp.org  info.org  log_1503702288.tgz  run.sh  run_1503702288
data/cicero/exp20170830124159/: exp.org  info.org  log_1504649431.tgz  run.sh  run_1504649431
data/cicero/exp20170904153555/: exp.org  info.org  log_1504554073.tgz  run.sh  run_1504554073
data/cicero/exp20170907112116/: exp.org  info.org  log_1504795600.tgz  run.sh  run_1504795600
data/cicero/exp20170907145711/: exp.html  exp.md  exp.org  exp.rst  info.org  log_1504810921.tgz  run.sh  run_1504810921
data/cicero/exp20170914091842/: exp.org  exp.rst  info.org  run.sh  run_1505411932  run_1505412076  run_1505412384
data/cicero/exp20170915143003/: exp.org  exp.rst  info.org  log_1505497224.tgz  log_1505503014.tgz  run.sh  run_1505497224  run_1505503014
data/cicero/exp20170919161448/: exp.org  exp.rst  info.org  log_1505852677.tgz  log_1505933858.tgz  run.sh  run_1505852677  run_1505933858
data/cicero/exp20170923144931/: exp.org  exp.rst  info.org  log_1506199809.tgz  run.sh  run_1506199809
data/cicero/exp20170923193058/: exp.org  exp.rst  info.org  log_1506206431.tgz  run.sh  run_1506206431
data/cicero/exp20170925155952/: exp.org  exp.rst  info.org  log_1506432955.tgz  run.sh  run_1506432955
data/cicero/exp20171009155025/: exp.org  info.org  log_1507581698.tgz  log_1507669861.tgz  log_1507691669.tgz  run.sh  run_1507581698  run_1507669861  run_1507691669
data/cicero/exp20171012184842/: exp.org  info.org  log_1507849705.tgz  log_1507923856.tgz  run.sh  run_1507848678  run_1507849705  run_1507923856
data/cicero/exp20171016155353/: exp.org  info.org  log_1508177471.tgz  log_1510826640.tgz  run.sh  run_1508177471  run_1510826640  speedup_comparison_BTree_RTree.rst
data/cicero/exp20171111161232/: exp.org  falsePosAnalysisRef10.rds  info.org  log_1510425176.tgz  log_1510783350.tgz  run.sh  run_1510424914  run_1510425176  run_1510771798  run_1510783350
data/cicero/exp20171125095944/: exp.org  info.org  run.sh  run_1511619823
data/inf-desktop/exp20170822165129/: exp.html  exp.org  log_1503497835.tgz  plotResults.R  run.sh
ext/DMPLoader/: dmploader.cpp
include/: BTreeCtn.cpp  BTreeCtn.h  ContainerInterface.h  ContainerIntf.h  DenseCtn.h  DenseVector.cpp  DenseVector.h  DenseVectorCtn.cpp  DenseVectorCtn.h  ExplicitDenseVectorCtn.cpp  ExplicitDenseVectorCtn.h  GenericType.h  GeoCtnIntf.h  GeoHash.cpp  GeoHash.h  GeoRunner.cpp  GeoRunner.h  ImplicitDenseVectorCtn.cpp  ImplicitDenseVectorCtn.h  InputIntf.h  PMABatch.cpp  PMABatch.h  PMABatchCtn.cpp  PMABatchCtn.h  PMAInstance.cpp  PMAInstance.h  PMQ.cpp  PMQ.h  PMQInterface.cpp  PMQInterface.h  PostGisCtn.cpp  PostGisCtn.h  QuadtreeIntf.cpp  QuadtreeIntf.h  QuadtreeNode.cpp  QuadtreeNode.h  Query.cpp  Query.h  RTreeCtn.cpp  RTreeCtn.h  (+22 more)
include/DMPLoader/: dmploader.cpp  dmploader.hpp
include/geos/: geos_c.h
include/mongoose/: mongoose.c  mongoose.h
include/sorting/: timsort.hpp
scripts/: clean_json.ipy  dmp_loc_stream.sh  dmp_track_stream.sh  g5k_get_info.sh  getStreams.py  parserTweetBin.ipy  parserTweetText.ipy
tests/: CMakeLists.txt  test_containers_count.cpp  test_geohash.cpp  test_geohash_count.cpp  test_insert_remove_scan.cpp  test_pma_diff.cpp  test_pma_quadtree_counts.cpp  test_pmq_count.cpp
